--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "static",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "gulp build"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "postcss-csso": "^6.0.1",
-    "postcss-import": "^15.1.0",
-    "postcss-media-minmax": "^5.0.0",
-    "rimraf": "^4.4.0"
-  }
+	"name": "static",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "rimraf dist && gulp build"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"gulp": "^4.0.2",
+		"gulp-postcss": "^9.0.1",
+		"gulp-rename": "^2.0.0",
+		"postcss-csso": "^6.0.1",
+		"postcss-import": "^15.1.0",
+		"postcss-media-minmax": "^5.0.0",
+		"rimraf": "^4.4.0"
+	}
 }
